k8s/deployement_initcontainer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpage-motd-deployment
  labels:
    app: kpage-motd-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kpage-motd-api
  template:
    metadata:
      labels:
        app: kpage-motd-api
        app.kubernetes.io/name: kpage-motd-api
    spec:
      containers:
      - name: kpage-motd-api
        image: kilaketia/motd-api:v2
        ports:
        - containerPort: 80
